Added a quick way to test the texttext without python
- An issue in my environment in not allowing me to run it properly
- Dont want to spend too much time debugging that during the excercise

--- a/TypeScript/package.json
+++ b/TypeScript/package.json
@@ -9,7 +9,8 @@
     "test:jest": "jest",
     "test:jest:watch": "jest --watchAll",
     "test:mocha": "nyc mocha",
-    "test:vitest": "vitest --coverage"
+    "test:vitest": "vitest --coverage",
+    "test:texttexts": "npx ts-node test/golden-master-text-test.ts 30 > /tmp/test.out && diff --color /tmp/test.out ../texttests/ThirtyDays/stdout.gr"
   },
   "license": "MIT",
   "private": true,
