--- a/TypeScript/package.json
+++ b/TypeScript/package.json
@@ -12,7 +12,6 @@
     "test:vitest": "vitest --coverage",
     "test:texttexts": "npx ts-node test/golden-master-text-test.ts 30 > /tmp/test.out && diff --color ../texttests/ThirtyDays/stdout.gr /tmp/test.out",
     "test:texttexts:fix": "npx ts-node test/golden-master-text-test.ts 30 > ../texttests/ThirtyDays/stdout.gr"
-
   },
   "license": "MIT",
   "private": true,
@@ -21,8 +20,14 @@
     "@types/jest": "^29.4.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@vitest/coverage-istanbul": "^0.28.5",
     "chai": "^4.3.4",
+    "eslint": "^8.53.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.4.3",
     "mocha": "^10.2.0",
     "nyc": "~15.1.0",
@@ -31,7 +36,7 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.4.4",
+    "typescript": "^5.2.2",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.28.5"
   }
